Fixed result evaluation

--- a/evaluate_results.ipynb
+++ b/evaluate_results.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,96 +15,130 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.4346967635788023"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# test\n",
-    "res = pd.read_csv('results/CRC_meta/CRC_meta.fa_gt1bp_dvfpred.txt', sep=\"\\t\")\n",
-    "res[res['model_contig_len'] == 150]['score'].mean()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# parameters\n",
     "results_dir = 'results'\n",
     "genomes = ['h_human-3', 'v_sars-cov-2']\n",
+    "# contig_lengths = [1000]\n",
     "contig_lengths = [25, 50, 100, 150, 300, 500, 1000, 3000]\n",
     "model_types = [150, 300, 500, 1000]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "# compute average scores for each genome\n",
-    "ave_scores = {}\n",
-    "for g in genomes:\n",
-    "    ave_scores[g] = np.zeros((len(contig_lengths), len(model_types)))\n",
-    "    for i, l in enumerate(contig_lengths):\n",
-    "        res = pd.read_csv(os.path.join(results_dir, g, f'{g}_{l}.fasta_gt1bp_dvfpred.txt'))\n",
-    "        for j, m in enumerate(model_types):\n",
-    "            if g.split('_')[0] == 'h':\n",
-    "                ave_scores[i,j] = 1 - res[res['model_contig_len'] == m]['score'].mean()\n",
-    "            elif g.split('_')[0] == 'v':\n",
-    "                ave_scores[i,j] = res[res['model_contig_len'] == m]['score'].mean()\n",
-    "            else:\n",
-    "                raise ValueError(f'Unknown identifier: {g.split(\"_\")[0]} (should be h or v)')\n",
-    "\n",
-    "    print('----------------------------------------------------')        \n",
-    "    print(g)\n",
-    "    print(ave_scores[g])\n",
-    "    print()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Input: 1000': {'Model: 150': {'Genome score: h_human-3': 0.5769636034965515,\n",
+       "   'Genome score: v_sars-cov-2': 0.47995015382766726,\n",
+       "   'Accuracy': 0.6,\n",
+       "   'Precision': 1.0,\n",
+       "   'Recall': 0.2,\n",
+       "   'F1': 0.33333333333333337,\n",
+       "   'AUROC': 1.0},\n",
+       "  'Model: 300': {'Genome score: h_human-3': 0.4633482217788696,\n",
+       "   'Genome score: v_sars-cov-2': 0.6666653752326965,\n",
+       "   'Accuracy': 0.8,\n",
+       "   'Precision': 0.7142857142857143,\n",
+       "   'Recall': 1.0,\n",
+       "   'F1': 0.8333333333333333,\n",
+       "   'AUROC': 0.76},\n",
+       "  'Model: 500': {'Genome score: h_human-3': 0.36159304976463313,\n",
+       "   'Genome score: v_sars-cov-2': 0.9316253781318664,\n",
+       "   'Accuracy': 0.7,\n",
+       "   'Precision': 0.625,\n",
+       "   'Recall': 1.0,\n",
+       "   'F1': 0.7692307692307693,\n",
+       "   'AUROC': 0.6799999999999999},\n",
+       "  'Model: 1000': {'Genome score: h_human-3': 0.7743676940910519,\n",
+       "   'Genome score: v_sars-cov-2': 0.8632304072380066,\n",
+       "   'Accuracy': 0.8,\n",
+       "   'Precision': 0.8,\n",
+       "   'Recall': 0.8,\n",
+       "   'F1': 0.8000000000000002,\n",
+       "   'AUROC': 0.8}}}"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# compute classification metrics\n",
     "metrics = {}\n",
     "for l in contig_lengths:\n",
-    "    y_pred = np.empty((0))\n",
-    "    y_true = np.empty((0))\n",
-    "    for g in genomes:\n",
-    "        res = pd.read_csv(os.path.join(results_dir, g, f'{g}_{l}.fasta_gt1bp_dvfpred.txt'))\n",
-    "        \n",
-    "        for m in model_types:\n",
+    "    metrics[f'Input: {l}'] = {}\n",
+    "    for m in model_types:\n",
+    "        metrics[f'Input: {l}'][f'Model: {m}'] = {}\n",
+    "        y_pred = np.empty((0))\n",
+    "        y_true = np.empty((0))\n",
+    "\n",
+    "        for g in genomes:\n",
+    "            res = pd.read_csv(os.path.join(results_dir, g, f'{g}_{l}.fasta_gt1bp_dvfpred.txt'), sep=\"\\t\")\n",
     "            m_res = res[res['model_contig_len'] == m]['score']\n",
     "            y_pred = np.append(y_pred, m_res)\n",
+    "\n",
     "            if g.split('_')[0] == 'h':\n",
+    "                metrics[f'Input: {l}'][f'Model: {m}'][f'Genome score: {g}'] = 1 - m_res.mean()\n",
     "                y_true = np.append(y_true, np.zeros((len(m_res))))\n",
     "            elif g.split('_')[0] == 'v':\n",
+    "                metrics[f'Input: {l}'][f'Model: {m}'][f'Genome score: {g}'] = m_res.mean()\n",
     "                y_true = np.append(y_true, np.ones((len(m_res))))\n",
     "            else:\n",
     "                raise ValueError(f'Unknown identifier: {g.split(\"_\")[0]} (should be h or v)')\n",
     "\n",
-    "    metrics[l]['Accuracy'] = accuracy_score(y_true, y_pred)\n",
-    "    metrics[l]['Precision'] = precision_score(y_true, y_pred)\n",
-    "    metrics[l]['Recall'] = recall_score(y_true, y_pred)\n",
-    "    metrics[l]['F1'] = f1_score(y_true, y_pred)\n",
-    "    metrics[l]['AUROC'] = roc_auc_score(y_true, y_pred)\n",
+    "        metrics[f'Input: {l}'][f'Model: {m}']['Accuracy'] = accuracy_score(y_true, y_pred > 0.5)\n",
+    "        metrics[f'Input: {l}'][f'Model: {m}']['Precision'] = precision_score(y_true, y_pred > 0.5)\n",
+    "        metrics[f'Input: {l}'][f'Model: {m}']['Recall'] = recall_score(y_true, y_pred > 0.5)\n",
+    "        metrics[f'Input: {l}'][f'Model: {m}']['F1'] = f1_score(y_true, y_pred > 0.5)\n",
+    "        metrics[f'Input: {l}'][f'Model: {m}']['AUROC'] = roc_auc_score(y_true, y_pred)\n",
     "            \n",
-    "print(metrics)"
+    "metrics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "h_human-3\n",
+      "[[0.5769636  0.46334822 0.36159305 0.77436769]]\n",
+      "\n",
+      "v_sars-cov-2\n",
+      "[[0.47995015 0.66666538 0.93162538 0.86323041]]\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# irrelevant given above cell but may be useful later\n",
+    "ave_scores = {}\n",
+    "for g in genomes:\n",
+    "    ave_scores[g] = np.zeros((len(contig_lengths), len(model_types)))\n",
+    "    for i, l in enumerate(contig_lengths):\n",
+    "        res = pd.read_csv(os.path.join(results_dir, g, f'{g}_{l}.fasta_gt1bp_dvfpred.txt'), sep=\"\\t\")\n",
+    "        for j, m in enumerate(model_types):\n",
+    "            if g.split('_')[0] == 'h':\n",
+    "                ave_scores[g][i,j] = 1 - res[res['model_contig_len'] == m]['score'].mean()\n",
+    "            elif g.split('_')[0] == 'v':\n",
+    "                ave_scores[g][i,j] = res[res['model_contig_len'] == m]['score'].mean()\n",
+    "            else:\n",
+    "                raise ValueError(f'Unknown identifier: {g.split(\"_\")[0]} (should be h or v)')\n",
+    "       \n",
+    "    print(g)\n",
+    "    print(ave_scores[g])\n",
+    "    print()"
    ]
   }
  ],
